Restaurant: Prep Webpack
Prep to implement webpack.

--- a/restaurant-page/reservations.html
+++ b/restaurant-page/reservations.html
@@ -19,10 +19,10 @@
         </div>
         <div class="menu">
           <nav>
-            <span>Home</span>
-            <span>Menu</span>
-            <span>Delivery</span>
-            <span>Reservation</span>
+            <span id="homeBtn">Home</span>
+            <span id="menuBtn">Menu</span>
+            <span id="deliveryBtn">Delivery</span>
+            <span id="bookBtn">Reservation</span>
           </nav>
         </div>
       </div>
