--- a/form-validation/index.html
+++ b/form-validation/index.html
@@ -8,25 +8,50 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="form">
-    <div class="title">Welcome</div>
-    <div class="subtitle">Let's create your account!</div>
-    <div class="input-container ic1">
-      <input id="firstname" class="input" type="text" placeholder=" " />
-      <div class="cut"></div>
-      <label for="firstname" class="placeholder">First name</label>
-    </div>
-    <div class="input-container ic2">
-      <input id="lastname" class="input" type="text" placeholder=" " />
-      <div class="cut"></div>
-      <label for="lastname" class="placeholder">Last name</label>
-    </div>
-    <div class="input-container ic2">
-      <input id="email" class="input" type="text" placeholder=" " />
-      <div class="cut cut-short"></div>
-      <label for="email" class="placeholder">Email</>
-    </div>
-    <button type="text" class="submit">submit</button>
+  <div class="container">
+    
+    <form id="form" class="form">
+      <div class="header">
+        <h2 class="title">Create Account</h2>
+      </div>
+      <div class="form-control input-container ic1">
+        <label for="email" class="subtitle">Email</label>
+        <input type="email" class="input" placeholder="What is your email?" id="email" />
+        <i class="fas fa-check-circle"></i>
+        <i class="fas fa-exclamation-circle"></i>
+        <small>Error message</small>
+      </div>
+      <div class="form-control input-container ic1">
+        <label for="country" class="subtitle">Country</label>
+        <input type="country" class="input" placeholder="Where do you live?" id="country"/>
+        <i class="fas fa-check-circle"></i>
+        <i class="fas fa-exclamation-circle"></i>
+        <small>Error message</small>
+      </div>
+      <div class="form-control input-container ic1">
+        <label for="zipcode" class="subtitle">Zip Code</label>
+        <input type="zipcode" class="input" placeholder="What is your postcode?" id="zipcode"/>
+        <i class="fas fa-check-circle"></i>
+        <i class="fas fa-exclamation-circle"></i>
+        <small>Error message</small>
+      </div>
+      <div class="form-control input-container ic1">
+        <label for="password" class="subtitle">Password</label>
+        <input type="password" class="input" placeholder="Choose a password" id="password"/>
+        <i class="fas fa-check-circle"></i>
+        <i class="fas fa-exclamation-circle"></i>
+        <small>Error message</small>
+      </div>
+      <div class="form-control input-container ic1">
+        <label for="confirm_password" class="subtitle">Confirm Password</label>
+        <input type="password" class="input" placeholder="Confirm your password" id="confirm_password"/>
+        <i class="fas fa-check-circle"></i>
+        <i class="fas fa-exclamation-circle"></i>
+        <small>Error message</small>
+      </div>
+      <button class="submit">Submit</button>
+    </form>
   </div>
+  <script src="validation.js"></script>
 </body>
 </html>
