Form Validation: Finished Styling
Changed to a more traditional form and styled it how I liked. Finished implementing error message styling and an alert for when the form is successfully validated.

--- a/form-validation/index.html
+++ b/form-validation/index.html
@@ -23,14 +23,14 @@
       </div>
       <div class="form-control input-container ic1">
         <label for="country" class="subtitle">Country</label>
-        <input type="country" class="input" placeholder="Where do you live?" id="country"/>
+        <input type="text" class="input" placeholder="Where do you live?" id="country"/>
         <i class="fas fa-check-circle"></i>
         <i class="fas fa-exclamation-circle"></i>
         <small>Error message</small>
       </div>
       <div class="form-control input-container ic1">
         <label for="zipcode" class="subtitle">Zip Code</label>
-        <input type="zipcode" class="input" placeholder="What is your postcode?" id="zipcode"/>
+        <input type="number" class="input" placeholder="What is your postcode?" id="zipcode"/>
         <i class="fas fa-check-circle"></i>
         <i class="fas fa-exclamation-circle"></i>
         <small>Error message</small>
@@ -52,6 +52,7 @@
       <button class="submit">Submit</button>
     </form>
   </div>
+
   <script src="validation.js"></script>
 </body>
 </html>
