--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -4,12 +4,72 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Atmo | Weather Dash</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
+  
 </head>
 <body>
-  
-
+  <img class="bg" src="./assets/img/background.jpg" />
+  <div class="darken"></div>
+  <div class="content">
+    <div class="search">
+      <div class="location">
+        <h1>28°C</h1>
+        <h2>Brisbane</h2>
+        <p>Clear Sky</p>
+        <p>Sunrise 05:36 AM</p>
+        <p>Sunset 06:12 PM</p>
+      </div>
+    </div>
+    <div class="stats">
+      <div class="location_stats">
+        <p>Pressure: 1000</p>
+        <p>Humidity: 100%</p>
+        <p>Visibility: 10000m</p>
+        <p>Wind: 1.5m/sec</p>
+      </div>
+    </div>
+    <div class="forecast">
+      <div class="day1">
+        <img src="" alt="">
+        <p>18 / 26</p>
+        <p>Monday</p>
+      </div>
+      <div class="day2">
+        <img src="" alt="">
+        <p>18 / 26</p>
+        <p>Tuesday</p>
+      </div>
+      <div class="day3">
+        <img src="" alt="">
+        <p>18 / 26</p>
+        <p>Wednesday</p>
+      </div>
+      <div class="day4">
+        <img src="" alt="">
+        <p>18 / 26</p>
+        <p>Thursday</p>
+      </div>
+      <div class="day5">
+        <img src="" alt="">
+        <p>18 / 26</p>
+        <p>Friday</p>
+      </div>
+      <div class="day6">
+        <img src="" alt="">
+        <p>18 / 26</p>
+        <p>Saturday</p>
+      </div>
+      <div class="day7">
+        <img src="" alt="">
+        <p>18 / 26</p>
+        <p>Sunday</p>
+      </div>
+    </div>
+  </div> 
   <script src="./assets/js/weather.js"></script>
 </body>
 </html>
