--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -14,11 +14,11 @@
   <div class="content">
     <div class="search">
       <div class="location">
-        <h1>28°C</h1>
+        <h1><span id="temp"></span>°C</h1>
         <h2 id="city">Test</h2>
-        <p>Clear Sky</p>
-        <p>Sunrise 05:36 AM</p>
-        <p>Sunset 06:12 PM</p>
+        <p id="weather">Clear Sky</p>
+        <p>Sunrise <span id="sunrise"></span></p>
+        <p>Sunset <span id="sunset"></span></p>
         <form onsubmit="doSearch(event)" >
           <div class="search-box">
             <button class="btn-search">
@@ -31,10 +31,10 @@
     </div>
     <div class="stats">
       <div class="location_stats">
-        <p>Pressure: 1000</p>
-        <p>Humidity: 100%</p>
-        <p>Visibility: 10000m</p>
-        <p>Wind: 1.5m/sec</p>
+        <p>Pressure: <span id="pressure"></span></p>
+        <p>Humidity: <span id="humidity"></span>%</p>
+        <p>Visibility: <span id="visibility"></span>m</p>
+        <p>Wind: <span id="wind"></span>km/h</p>
       </div>
     </div>
     <div class="forecast">
