--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -14,12 +14,13 @@
   <div class="content">
     <div class="search">
       <div class="location">
+        <img src="#" id="current_icon" class="weather_icons" />
         <h1><span id="temp"></span>°C</h1>
-        <h2 id="city">Test</h2>
-        <p id="weather">Clear Sky</p>
+        <h2 id="city"></h2>
+        <p id="weather"></p>
         <p>Sunrise <span id="sunrise"></span></p>
         <p>Sunset <span id="sunset"></span></p>
-        <form onsubmit="doSearch(event)" >
+        <form onsubmit="userSearch(event)" >
           <div class="search-box">
             <button class="btn-search">
               <i class="material-icons">search</i>
@@ -33,43 +34,42 @@
       <div class="location_stats">
         <p>Pressure: <span id="pressure"></span></p>
         <p>Humidity: <span id="humidity"></span>%</p>
-        <p>Visibility: <span id="visibility"></span>m</p>
         <p>Wind: <span id="wind"></span>km/h</p>
       </div>
     </div>
     <div class="forecast">
       <div class="day1">
-        <img src="" alt="">
+        <img src="./assets/icons/Snow.png" class="weather_icons" alt="">
         <p>18 / 26</p>
         <p>Monday</p>
       </div>
       <div class="day2">
-        <img src="" alt="">
+        <img src="./assets/icons/Raining.png" class="weather_icons" alt="">
         <p>18 / 26</p>
         <p>Tuesday</p>
       </div>
       <div class="day3">
-        <img src="" alt="">
+        <img src="./assets/icons/Clear.png" class="weather_icons" alt="">
         <p>18 / 26</p>
         <p>Wednesday</p>
       </div>
       <div class="day4">
-        <img src="" alt="">
+        <img src="./assets/icons/Clear.png" class="weather_icons" alt="">
         <p>18 / 26</p>
         <p>Thursday</p>
       </div>
       <div class="day5">
-        <img src="" alt="">
+        <img src="./assets/icons/Smoke.png" class="weather_icons" alt="">
         <p>18 / 26</p>
         <p>Friday</p>
       </div>
       <div class="day6">
-        <img src="" alt="">
+        <img src="./assets/icons/Snow.png" class="weather_icons" alt="">
         <p>18 / 26</p>
         <p>Saturday</p>
       </div>
       <div class="day7">
-        <img src="" alt="">
+        <img src="./assets/icons/Dust.png" class="weather_icons" alt="">
         <p>18 / 26</p>
         <p>Sunday</p>
       </div>
