--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -33,55 +33,68 @@
     </div>
     <div class="weather">
       <div class="location">
-        <img src="#" id="current_icon" class="weather_icons" />
-        <h1><span id="temp"></span><span id="symbol"></span></h1>
-        <h2 id="city"></h2>
-        <p id="weather"></p>
-        <p>Sunrise <span id="sunrise"></span></p>
-        <p>Sunset <span id="sunset"></span></p>
+        <div class="location_content">
+          <img src="#" id="current_icon" class="weather_icons" />
+          <h1><span id="temp"></span><span id="symbol"></span></h1>
+          <h2 id="city"></h2>
+          <p id="weather"></p>
+          <p>Low: <span id="low"></span><span id="lowsymbol"></span></p>
+          <p>High: <span id="high"></span><span id="highsymbol"></span></p>
+        </div>
       </div>
     </div>
     <div class="stats">
       <div class="location_stats">
-        <p>Pressure: <span id="pressure"></span></p>
-        <p>Humidity: <span id="humidity"></span>%</p>
-        <p>Wind: <span id="wind"></span>km/h</p>
+        <div class="stats_content">
+          <p>Pressure: <span id="pressure"></span> hPa</p>
+          <p>Humidity: <span id="humidity"></span>%</p>
+          <p>Wind: <span id="wind"></span> <span id="speed"></span></p>
+          <p>Sunrise: <span id="sunrise"></span></p>
+          <p>Sunset: <span id="sunset"></span></p>
+        </div>
       </div>
     </div>
     <div class="forecast">
       <div class="day1">
         <img src="./assets/icons/Snow.png" class="weather_icons" alt="">
         <p>18 / 26</p>
+        <p>Snowing</p>
         <p>Monday</p>
       </div>
       <div class="day2">
         <img src="./assets/icons/Rain.png" class="weather_icons" alt="">
         <p>18 / 26</p>
+        <p>Raining</p>
         <p>Tuesday</p>
       </div>
       <div class="day3">
         <img src="./assets/icons/Clear.png" class="weather_icons" alt="">
         <p>18 / 26</p>
+        <p>Clear sky</p>
         <p>Wednesday</p>
       </div>
       <div class="day4">
         <img src="./assets/icons/Clear.png" class="weather_icons" alt="">
         <p>18 / 26</p>
+        <p>Clear sky</p>
         <p>Thursday</p>
       </div>
       <div class="day5">
         <img src="./assets/icons/Tornado.png" class="weather_icons" alt="">
         <p>18 / 26</p>
+        <p>Tornado</p>
         <p>Friday</p>
       </div>
       <div class="day6">
         <img src="./assets/icons/Snow.png" class="weather_icons" alt="">
         <p>18 / 26</p>
+        <p>Snowing</p>
         <p>Saturday</p>
       </div>
       <div class="day7">
         <img src="./assets/icons/Storm.png" class="weather_icons" alt="">
         <p>18 / 26</p>
+        <p>Storms</p>
         <p>Sunday</p>
       </div>
     </div>
