Weather App: Hourly Forecast
Add hourly forecast to chart.

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -66,16 +66,9 @@
     <div class="hourly">
       <div class="hourly-stats">
         <div class="hourly-content">  
-          <div class="hourly-left">
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-          </div>
-          <div class="hourly-right">
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-          </div>
+          <div class="hourly-chart" id="hourlyChart" >
+            
+          </div>          
         </div>
       </div>
     </div>
@@ -124,7 +117,8 @@
         <p id="day7-text"></p>
       </div>
     </div>
-  </div> 
+  </div>
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
   <script src="./assets/js/weather.js"></script>
 </body>
 </html>
